spring-rest/src/main/java/com/example/spring_rest/error/ProdutoPriceException.java
package com.example.spring_rest.error;

public class ProdutoPriceException extends RuntimeException {
    public ProdutoPriceException(String msg){
        super(msg);
    }
}
